--- a/src/scss/KMS.scss
+++ b/src/scss/KMS.scss
@@ -9,3 +9,25 @@
 ul{
     list-style: none;
 }
+img{
+    width: 100px;
+    height: 100px;
+}
+a{
+    color: black;
+    text-decoration: none;
+}
+ul{
+    i{
+        font-size: 2rem;
+
+    }
+}
+    
+.swiper-slide  {
+    div{
+        height: 100vh;
+    }
+   
+}
+
